[project]
name = "yt-audio-separator"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-limiter>=3.0.0",
    "yt-dlp>=2025.9.5",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "audio-separator>=0.36.1",
    "onnxruntime>=1.22.1",
    "dotenv>=0.9.9",
    "boto3>=1.40.25",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.8",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.main]
load-plugins = []

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "invalid-name",
    "unused-import",
    "import-error",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "app", "e"]

[tool.pylint.design]
max-attributes = 10
max-parents = 10
max-returns = 8
max-branches = 15
max-statements = 60
